Version 1.57 2011-08-17
=======================
* Added support for Linux 2.6.35 - Linux 3.1
* Kernels as old as 2.6.14 are now supported
* IW_AUTH_MFP implemented
* Fixed argument passing in x86_64
* Fixed a kernel panic if there are many devices for one driver and one
  fails to initialize
* Fixed a kernel panic with Marvell USB if ndiswrapper is reloaded
* Fixed support for AVM Fritz USB
* Loading drivers with unknown symbols is disallowed, it's a certain crash
* Fixed procfs registration if the network device is renamed
* Added more function stubs
* Build system improved
* Code cleanup, fixed many warnings, style issues and typos

Version 1.56 2010-02-10
=======================
* Fixed compilation with 2.6.31 and newer on i386
* Use /etc/modprobe.d/ndiswrapper.conf, not /etc/modprobe.d/ndiswrapper.

Version 1.55 2009-06-28
=======================
* Fixed compilation issues with recent kernels

Version 1.54 2009-01-21
=======================
* Fixed buffer overflows with nickname
* Compilation issues with 2.6.27 and 2.6.28 fixed

Version 1.53 2008-05-17
=======================
* Implemented va_list conversion for x86_64, which fixes oops in
  vsprintf() and vsnprintf().
* Fixed oops on unload if using our workqueue implementation with SMP enabled.
* Don't change the actual thread priority, just pretend it was changed.
* Implemented format string conversion for x86_64, so that Windows long
  is mapped to Linux int.
* Fixed most sparse warnings.
* Simplified code and build system to remove already broken support for
  Linux versions prior to 2.6.16.
* Added .size and .type for all functions in win2lin_stubs.S to improve
  backtrace on x86_64.
* Fixed rx key authentication sequence number conversion from Windows to
  Linux so WPA authentication doesn't sometimes go into re-key auth loop.

Version 1.52 2008-02-02
=======================
* Fixed kernel crash when CONFIG_DEBUG_SHIRQ is enabled
* Compilation issues with current 2.6.25 kernel tree fixed
